# work_record

work_record/: CMakeLists.txt  README.md  build_cmake.bat  main.cpp
work_record/config/: README.md  app.json  development.json  production.json
work_record/constants/: constants_sql.h  constants_upload.h
work_record/dao/: affected_type_dict_dao.h  department_dict_dao.h  employee_dict_dao.h  filerecord_dao.h  issue_progress_dict_dao.h  issue_record_dao.h  requirement_record_dao.h  requirement_status_dict_dao.h  source_type_dict_dao.h  work_record_dao.h  work_record_file_dao.h  work_record_status_dict_dao.h  work_type_dict_dao.h
work_record/db/: db_util.h  init.sql  work_record.db  work_record_design.md
work_record/include/config/: ConfigInitializer.h  ConfigManager.h  EnvConfigProvider.h  IConfigProvider.h  JsonConfigProvider.h
work_record/include/constants/: constants_sql.h
work_record/include/dao/: affected_type_dict_dao.h  department_dict_dao.h  employee_dict_dao.h  filerecord_dao.h  issue_progress_dict_dao.h  issue_record_dao.h  requirement_record_dao.h  requirement_status_dict_dao.h  source_type_dict_dao.h  work_record_dao.h  work_record_file_dao.h  work_record_status_dict_dao.h  work_type_dict_dao.h
work_record/include/model/: affected_type_dict_model.h  department_dict_model.h  employee_dict_model.h  file_record_model.h  issue_progress_dict_model.h  issue_record_model.h  requirement_record_model.h  requirement_status_dict_model.h  source_type_dict_model.h  work_record_model.h  work_record_status_dict_model.h  work_type_dict_model.h
work_record/include/service/: department_service.h  dict_service.h  employee_service.h  issue_service.h  requirement_service.h  work_service.h
work_record/include/util/: dao_util.h  db_util.h  file_util.h  log_util.h  response_util.h  string_util.h
work_record/model/: department_dict_model.h  employee_dict_model.h  file_record_model.h  issue_record_model.h  requirement_status_dict_model.h  source_type_dict_model.h  work_record_model.h  work_type_dict_model.h
work_record/service/: department_service.h  dict_service.h  employee_service.h  issue_service.h  requirement_service.h  work_service.h
work_record/src/config/: ConfigInitializer.cpp  ConfigManager.cpp  EnvConfigProvider.cpp  JsonConfigProvider.cpp
work_record/src/dao/: affected_type_dict_dao.cpp  department_dict_dao.cpp  employee_dict_dao.cpp  filerecord_dao.cpp  issue_progress_dict_dao.cpp  issue_record_dao.cpp  requirement_record_dao.cpp  source_type_dict_dao.cpp  (+5 more)
work_record/util/: file_util.h  string_util.h
(+16 files in other folders)
